# kalmar

./: CMakeLists.txt
Bolt/: CMakeLists.txt
Bolt/include/bolt/amp/: device_vector.h
Bolt/include/bolt/amp/detail/: copy.inl
CpuRename/: CpuRename.cpp
SPIRify/: Promote.cpp
amp-conformance/: passlist.txt  run_tests.pl.in  test_one.pl.in
include/: amp.h  amp_allocator.h  amp_cpu.h  amp_cpu_manage.h  amp_impl.h  amp_manage.h  amp_math.h  amp_runtime.h  amprt.h  cl_manage.h  cpu_manage.h  hsa_new.h  md5.h  parallel_for_each.h  pfe_cpu.h  serialize.h
lib/: CMakeLists.txt  clamp-device.in  clamp-embed.in  clamp-hsatools.in  clamp-link.in  clamp-preprocess.in  mcwamp.cpp  mcwamp_main.cpp  opencl_version.cpp
lib/cpu/: mcwamp_cpu.cpp
lib/hsa/: HSAContextKaveri.cpp  mcwamp_hsa.cpp
lib/opencl_11/: mcwamp_opencl_11.cpp
lib/opencl_12/: mcwamp_opencl_12.cpp
lib/opencl_20/: CMakeLists.txt  mcwamp_opencl_20.cpp  ocl20_query.cpp
libc++/: CMakeLists.txt
scripts/cmake/: MCWAMP.cmake
tests/MultipleAccelerators/: checking_view_binding.cpp  copying_across_gpus.cpp  get_all.cpp  pfe_on_selected_device.cpp  test_accelerator_ctors.cpp
tests/Unit/AutoRestricted/: vector_copy.cpp
tests/Unit/Design/: 2d.cpp
tests/Unit/MemoryLeak/: lambda_copy.cpp
tests/Unit/PlatformAtomics/: atomic_15.ll
